<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/title_change_value"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btnClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_close_24" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitleMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max_value"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@id/edtMax"
        app:layout_constraintStart_toStartOf="@id/tvTitle" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtMax"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvTitleMax"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitleMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:text="@string/min_value"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@id/edtMin"
        app:layout_constraintStart_toStartOf="@id/tvTitle" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtMin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@id/edtMax"
        app:layout_constraintStart_toEndOf="@id/tvTitleMin"
        app:layout_constraintStart_toStartOf="@id/edtMax"
        app:layout_constraintTop_toBottomOf="@id/edtMax" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnNext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:background="@color/teal_700"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/change"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtMin" />

</androidx.constraintlayout.widget.ConstraintLayout>
